[package]
name = "verification"
version = "0.1.0"
# authors = [""]
edition = "2021"
repository = "https://github.com/blockscout/blockscout-rs/verification"

[dependencies]
actix-rt = "2.7"
actix-web = "4"
actix-web-prom = "0.6"
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.1"
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
config = "0.13"
cron = "0.11"
env_logger = "0.9"
ethabi = "17.0"
ethers-core = "0.13"
ethers-solc = { version = "0.13", features = ["svm-solc"] }
futures = "0.3"
hex = "0.4"
lazy_static = "1"
minicbor = { version = "0.16", features = ["std"] }
octocrab = "0.16"
parking_lot = "0.12"
primitive-types = "0.11"
prometheus = "0.13"
reqwest = { version = "0.11", features = ["json"] }
semver = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1.14"
sha2 = "0.10"
sscanf = "0.2"
thiserror = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
url = { version = "2.2", features = ["serde"] }

[dev-dependencies]
const_format = "0.2"
rand = "0.8"
async-once-cell = "0.4.2"
wiremock = "0.5"